// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculateTypeScale > should generate a scale with tailwind labels 1`] = `
[
  {
    "clamp": "clamp(2.7994rem, 2.4462rem + 1.7658vw, 3.8147rem)",
    "label": "4xl",
    "maxFontSize": 61.0352,
    "minFontSize": 44.7898,
    "step": 5,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(2.3328rem, 2.0827rem + 1.2504vw, 3.0518rem)",
    "label": "3xl",
    "maxFontSize": 48.8281,
    "minFontSize": 37.3248,
    "step": 4,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.944rem, 1.771rem + 0.8651vw, 2.4414rem)",
    "label": "2xl",
    "maxFontSize": 39.0625,
    "minFontSize": 31.104,
    "step": 3,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.62rem, 1.5041rem + 0.5793vw, 1.9531rem)",
    "label": "xl",
    "maxFontSize": 31.25,
    "minFontSize": 25.92,
    "step": 2,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.35rem, 1.2761rem + 0.3696vw, 1.5625rem)",
    "label": "lg",
    "maxFontSize": 25,
    "minFontSize": 21.6,
    "step": 1,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.125rem, 1.0815rem + 0.2174vw, 1.25rem)",
    "label": "md",
    "maxFontSize": 20,
    "minFontSize": 18,
    "step": 0,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(0.9375rem, 0.9158rem + 0.1087vw, 1rem)",
    "label": "sm",
    "maxFontSize": 16,
    "minFontSize": 15,
    "step": -1,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(0.7813rem, 0.7747rem + 0.0326vw, 0.8rem)",
    "label": "xs",
    "maxFontSize": 12.8,
    "minFontSize": 12.5,
    "step": -2,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(0.64rem, 0.6549rem + -0.0192vw, 0.651rem)",
    "label": "2xs",
    "maxFontSize": 10.24,
    "minFontSize": 10.4167,
    "step": -3,
    "wcagViolation": undefined,
  },
]
`;

exports[`calculateTypeScale > should generate a scale with tshirt labels 1`] = `
[
  {
    "clamp": "clamp(2.7994rem, 2.4462rem + 1.7658vw, 3.8147rem)",
    "label": "4xl",
    "maxFontSize": 61.0352,
    "minFontSize": 44.7898,
    "step": 5,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(2.3328rem, 2.0827rem + 1.2504vw, 3.0518rem)",
    "label": "3xl",
    "maxFontSize": 48.8281,
    "minFontSize": 37.3248,
    "step": 4,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.944rem, 1.771rem + 0.8651vw, 2.4414rem)",
    "label": "2xl",
    "maxFontSize": 39.0625,
    "minFontSize": 31.104,
    "step": 3,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.62rem, 1.5041rem + 0.5793vw, 1.9531rem)",
    "label": "xl",
    "maxFontSize": 31.25,
    "minFontSize": 25.92,
    "step": 2,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.35rem, 1.2761rem + 0.3696vw, 1.5625rem)",
    "label": "l",
    "maxFontSize": 25,
    "minFontSize": 21.6,
    "step": 1,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.125rem, 1.0815rem + 0.2174vw, 1.25rem)",
    "label": "m",
    "maxFontSize": 20,
    "minFontSize": 18,
    "step": 0,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(0.9375rem, 0.9158rem + 0.1087vw, 1rem)",
    "label": "s",
    "maxFontSize": 16,
    "minFontSize": 15,
    "step": -1,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(0.7813rem, 0.7747rem + 0.0326vw, 0.8rem)",
    "label": "xs",
    "maxFontSize": 12.8,
    "minFontSize": 12.5,
    "step": -2,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(0.64rem, 0.6549rem + -0.0192vw, 0.651rem)",
    "label": "2xs",
    "maxFontSize": 10.24,
    "minFontSize": 10.4167,
    "step": -3,
    "wcagViolation": undefined,
  },
]
`;

exports[`calculateTypeScale > should generate a valid scale 1`] = `
[
  {
    "clamp": "clamp(2.7994rem, 2.4462rem + 1.7658vw, 3.8147rem)",
    "label": "5",
    "maxFontSize": 61.0352,
    "minFontSize": 44.7898,
    "step": 5,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(2.3328rem, 2.0827rem + 1.2504vw, 3.0518rem)",
    "label": "4",
    "maxFontSize": 48.8281,
    "minFontSize": 37.3248,
    "step": 4,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.944rem, 1.771rem + 0.8651vw, 2.4414rem)",
    "label": "3",
    "maxFontSize": 39.0625,
    "minFontSize": 31.104,
    "step": 3,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.62rem, 1.5041rem + 0.5793vw, 1.9531rem)",
    "label": "2",
    "maxFontSize": 31.25,
    "minFontSize": 25.92,
    "step": 2,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.35rem, 1.2761rem + 0.3696vw, 1.5625rem)",
    "label": "1",
    "maxFontSize": 25,
    "minFontSize": 21.6,
    "step": 1,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(1.125rem, 1.0815rem + 0.2174vw, 1.25rem)",
    "label": "0",
    "maxFontSize": 20,
    "minFontSize": 18,
    "step": 0,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(0.9375rem, 0.9158rem + 0.1087vw, 1rem)",
    "label": "-1",
    "maxFontSize": 16,
    "minFontSize": 15,
    "step": -1,
    "wcagViolation": undefined,
  },
  {
    "clamp": "clamp(0.7813rem, 0.7747rem + 0.0326vw, 0.8rem)",
    "label": "-2",
    "maxFontSize": 12.8,
    "minFontSize": 12.5,
    "step": -2,
    "wcagViolation": undefined,
  },
]
`;
